--- a/src/app/page/dashboard/dashboard.component.html
+++ b/src/app/page/dashboard/dashboard.component.html
@@ -9,7 +9,6 @@
       [footer]="'Get More Space...'"
     ></app-info-card>
 
-
   </div>
 
   <div class="col-lg-3 col-md-6 col-sm-6">
@@ -90,6 +89,7 @@
      [data]="newProductsList">
 
     </app-table-card>
+    <a routerLink="/product" class="stretched-link">Go somewhere</a>
   </div>
 </div>
 
