--- a/src/app/page/dashboard/dashboard.component.html
+++ b/src/app/page/dashboard/dashboard.component.html
@@ -1,68 +1,42 @@
 <div class="row">
   <div class="col-lg-3 col-md-6 col-sm-6">
 
-    <app-info-card
-      [cardClass]="'card-header-success'"
-      [icon]="'shopping_cart'"
-      [title]="'Number of active products'"
-      [content]="'Active: ' + infoData.activeProductCount"
-      [footer]="'Get More Space...'"
-    ></app-info-card>
+    <app-info-card [cardClass]="'card-header-success'" [icon]="'shopping_cart'" [title]="'Number of active products'"
+      [content]="'Active: ' + infoData.activeProductCount" [footer]="'Get More Space...'"></app-info-card>
 
   </div>
 
   <div class="col-lg-3 col-md-6 col-sm-6">
 
-    <app-info-card
-      [cardClass]="'card-header-danger'"
-      [icon]="'unpublished'"
-      [title]="'Number of unpaid bills'"
-      [content]="'Unpaid: ' + infoData.unpaidBills"
-      [footer]="'Get More Space...'"
-    ></app-info-card>
+    <app-info-card [cardClass]="'card-header-danger'" [icon]="'unpublished'" [title]="'Number of unpaid bills'"
+      [content]="'Unpaid: ' + infoData.unpaidBills" [footer]="'Get More Space...'"></app-info-card>
 
 
   </div>
 
   <div class="col-lg-3 col-md-6 col-sm-6">
 
-    <app-info-card
-      [cardClass]="'card-header-danger'"
-      [icon]="'paid'"
-      [title]="'Amount of unpaid bills'"
-      [content]="'Unpaid: $' + infoData.unpaidAmount"
-      [footer]="'Get More Space...'"
-    ></app-info-card>
+    <app-info-card [cardClass]="'card-header-danger'" [icon]="'paid'" [title]="'Amount of unpaid bills'"
+      [content]="'Unpaid: $' + infoData.unpaidAmount" [footer]="'Get More Space...'"></app-info-card>
 
 
   </div>
 
   <div class="col-lg-3 col-md-6 col-sm-6">
-    <div class="card card-stats">
-      <div class="card-header card-header-info card-header-icon">
-        <div class="card-icon">
-          <i class="fa fa-twitter"></i>
-        </div>
-        <p class="card-category">Followers</p>
-        <h3 class="card-title">+245</h3>
-      </div>
-      <div class="card-footer">
-        <div class="stats">
-          <i class="material-icons">update</i> Just Updated
-        </div>
-      </div>
-    </div>
+
+    <app-info-card [cardClass]="'card-header-info'" [icon]="'person'" [title]="'Active customers'"
+      [content]="infoData.activeCustomers + ' Person'" [footer]="'Get More Space...'"></app-info-card>
+
+
   </div>
 </div>
+
 
 <div class="row col d-flex justify-content-center">
 
   <div class="col-md-4">
 
-    <app-status-card
-      [cardClass]="'card-header-info'"
-      title="Products"
-      [data]="productChartData"
+    <app-status-card [cardClass]="'card-header-info'" title="Products" [data]="productChartData"
       [colors]="productChartColors">
     </app-status-card>
 
@@ -70,11 +44,16 @@
 
   <div class="col-md-4">
 
-    <app-status-card
-      [cardClass]="'card-header-warning'"
-      title="Bills"
-      [data]="billChartData"
+    <app-status-card [cardClass]="'card-header-warning'" title="Bills" [data]="billChartData"
       [colors]="billChartColors">
+    </app-status-card>
+
+  </div>
+
+  <div class="col-md-4">
+
+    <app-status-card [cardClass]="'card-header-danger'" title="Orders" [data]="orderStatusChartData"
+      [colors]="orderStatusChartColors">
     </app-status-card>
 
   </div>
@@ -84,12 +63,9 @@
 <div class="row">
 
   <div class="col-lg-6 col-md-12">
-    <app-table-card
-
-     [data]="newProductsList">
+    <app-table-card [data]="newProductsList">
 
     </app-table-card>
     <a routerLink="/product" class="stretched-link">Go somewhere</a>
   </div>
 </div>
-
