--- a/src/app/page/edit-bill/edit-bill.component.html
+++ b/src/app/page/edit-bill/edit-bill.component.html
@@ -11,18 +11,18 @@
     <div class="form-group">
       <label for="orderID">OrderID</label>
       <input [(ngModel)]='bill.orderID' type="number" class="form-control" id="orderID"
-       name="orderID" required aria-describedby="orderID" required #billOrderID="ngModel" min="1">
+       name="orderID" required aria-describedby="orderID" required #billOrderID="ngModel" pattern=[min(1)]>
       <div [hidden]="billOrderID.valid || billOrderID.pristine">The Order required!</div>
     </div>
 
     <div class="form-group">
       <label for="amount">Amount</label>
       <input [(ngModel)]='bill.amount' type="number" class="form-control" id="amount"
-       name="amount" aria-describedby="amount" required #billAmount="ngModel" min="1">
+       name="amount" aria-describedby="amount" required #billAmount="ngModel" pattern=[min(1)]>
        <div [hidden]="billAmount.valid || billAmount.pristine">The amount required!</div>
     </div>
 
-  <button [disabled]="!billForm.form.valid" (click)="onSave()" type="submit"
+  <button [disabled]="!billForm.valid" (click)="onSave()" type="submit"
     class="btn btn-warning float-right" mat-raised-button=""><span class="mat-button-wrapper">Submit</span>
     <div class="mat-button-ripple-mat-riple" matripple=""></div>
     <div class="mat-button-focus-overlay"></div>
